# IPC

./: .gitignore  v.c
boost_asio/: CMakeLists.txt  boost_example_client.cpp  boost_example_server.cpp
cert/: ssi.crt  ssi.csr  ssi.dh2048  ssi.key
